# argox

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  argox-architecture.md  context.txt
.claude/: settings.json
.claude/commands/: argox-doc.md
.claude/hooks/: check-undocumented.sh
argox-dashboard/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
argox-dashboard/src/: App.tsx  index.css
argox-project/: pyproject.toml
argox-project/argox-collector/: .dockerignore  Dockerfile  README.md  pyproject.toml
argox-project/argox-collector/src/argox_collector/: __init__.py  __main__.py  app.py  dependencies.py  logging.py  middleware.py  semconv.py  settings.py
argox-project/argox-collector/src/argox_collector/audit/: __init__.py  chain.py  log.py
argox-project/argox-collector/src/argox_collector/auth/: __init__.py  authenticator.py  dependencies.py  factory.py  keys.py  keystore.py  oidc.py  principal.py
argox-project/argox-collector/src/argox_collector/enrichment/: __init__.py  cost.py  normalize.py  pii.py  pipeline.py  pricing.py  pricing.yaml
argox-project/argox-collector/src/argox_collector/index/: __init__.py  base.py  duckdb.py  factory.py
argox-project/argox-collector/src/argox_collector/ingest/: __init__.py  otlp.py
argox-project/argox-collector/src/argox_collector/routers/: __init__.py  audit.py  health.py  ingest.py  keys.py  policies.py  query.py  traces.py
argox-project/argox-collector/src/argox_collector/storage/: __init__.py  azure.py  base.py  factory.py  local.py
argox-project/argox-core/: pyproject.toml
argox-project/argox-core/src/argox/: __init__.py
argox-project/argox-core/src/argox/core/: __init__.py  context.py  decorator.py  manager.py  metrics.py  registry.py  state.py  telemetry.py
argox-project/argox-core/src/argox/exporters/: __init__.py  console.py  jsonl.py
argox-project/argox-core/src/argox/interfaces/: exporter.py  exporter_base.py  plugin.py  policy.py  processor.py
argox-project/argox-core/src/argox/observability/: __init__.py  jsonl.py  otlp.py  span_loggers.py
argox-project/argox-core/src/argox/policies/: __init__.py  cache.py  local_client.py  parser.py  remote_client.py  triggers.py
argox-project/argox-core/src/argox/processors/: __init__.py  pii.py
argox-project/argox-core/src/argox/semconv/: attributes.py
argox-project/argox-exporters/argox-exporter-azure/: README.md  pyproject.toml
argox-project/argox-exporters/argox-exporter-azure/src/argox_azure/: __init__.py  exporter.py
argox-project/argox-plugins/argox-plugin-debug/: pyproject.toml
argox-project/argox-plugins/argox-plugin-openai/: README.md  pyproject.toml
argox-project/argox-plugins/argox-plugin-openai/src/argox_openai/: __init__.py  plugin.py
argox-project/benchmarks/: bench_components.py  bench_concurrent.py  bench_e2e_live.py  bench_e2e_replay.py  bench_overhead.py  bench_payload.py  conftest.py
argox-project/examples/: .env.example  README.md  benchmark_overhead.py  demo_azure_openai.py  requirements.txt
argox-project/tests/: conftest.py  test_agent_registry.py  test_api_key_store.py  test_audit_log.py  test_auth.py  test_azure_exporter.py  test_collector_skeleton.py  test_console_exporter.py  test_core_data_model.py  test_cors.py  test_enrichment.py  test_fixtures.py  (+20 more)
(+57 files in other folders)
