[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argox-collector"
version = "0.1.0"
description = "Argox Collector — server-side ingestion, indexing and policy distribution service."
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
azure = [
    "azure-storage-blob>=12.0",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
argox-collector = "argox_collector.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/argox_collector"]
