[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argox-core"
version = "0.1.0"
description = "Core SDK for Argox: interfaces, manager, and telemetry foundation."
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.24.0"
]

[project.optional-dependencies]
otlp = [
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/argox"]
