[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argox-exporter-azure"
version = "0.1.0"
description = "Argox exporter for Azure Blob Storage."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "argox-core>=0.1.0",
    "azure-storage-blob>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/argox_azure"]
